task-19/nginx-last-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-last
  name: nginx-last
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-last
