task-19/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: p-xotam
spec:
  podSelector:
    matchLabels:
      app: nginx-last
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
        - 192.168.10.10/32
    - podSelector:
        matchLabels:
          access: granted
    ports:
    - protocol: TCP
      port: 80
